--- a/static/src/components/Navbar/navbar.css
+++ b/static/src/components/Navbar/navbar.css
@@ -49,3 +49,21 @@
     width: 20px;
     height: 20px;
 }
+@media screen and (max-width: 900px){
+   .metamask{
+    font-size: 14px;
+    padding: 8px;
+    gap: 6px;
+
+   }
+   .logo p{
+    font-size: 20px;
+   }
+   .logo{
+    gap: 8px;
+   }
+   .logo img{
+    width:40px;
+    height: 40px;
+   }
+}
