--- a/static/src/pages/faucet.css
+++ b/static/src/pages/faucet.css
@@ -1,13 +1,18 @@
 .faucet{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
+    gap: 16px;
     position: relative;
+    overflow: hidden;
+    overflow-y: auto;
     background-color: #000000;
     background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     align-items: center;
+    padding-top: 150px;
 }
 .heading{
     font-size: 3rem;
@@ -23,5 +28,32 @@
 }
 .sub-heading{
     font-size: 1.5rem;
+    color: white;
+}
+@media screen and (max-width: 900px){
+    .heading{
+        font-size: 1.8rem;
+    }
+    .sub-heading{
+        font-size: 1rem;
+
+    }
+    .faucet{
+        justify-content: center;
+    }
+}
+@media screen and (max-width: 1200px){
+    .heading{
+        font-size: 1.8rem;
+    }
+    .sub-heading{
+        font-size: 1rem;
+
+    }
+    .faucet{
+        padding-top:100px ;
+    }
+}
+h4{
     color: white;
 }
